# cargo-first

./: Cargo.toml  LICENSE  README.md
src/: main.rs
